--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
                 <h3>Dublin Docklands & Phoenix Park</h3>
             </div>
         </section>
+        <section id="reasons">
+            <h2>WHY LOVE RUNNING WITH US?</h2>
+        </section>
     </main>
     <!-- Footer -->
     <footer>
