--- a/index.html
+++ b/index.html
@@ -44,6 +44,28 @@
         </section>
         <section id="reasons">
             <h2>WHY LOVE RUNNING WITH US?</h2>
+            <div id="benefits">
+                <div id="benefits-physical">
+                    <div>
+                        <h3></h3>
+                        <p></p>
+                    </div>
+                    <div>
+                        <h3></h3>
+                        <p></p>
+                    </div>
+                </div>
+                <div id="benefits-mental">
+                    <div>
+                        <h3></h3>
+                        <p></p>
+                    </div>
+                    <div>
+                        <h3></h3>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <!-- Footer -->
