--- a/signup.html
+++ b/signup.html
@@ -35,7 +35,39 @@
         </nav>
     </header>
     <!-- Main content -->
-    <main>Main Content</main>
+    <main>
+
+        <section id="signup">
+            <form method="POST" action="https://formdump.codeinstitute.net" id="signup-form">
+                <h2><i class="fa-solid fa-heartbeat"></i>Let's get you signed up</h2>
+                <label for="first-name">First Name</label>
+                <input type="text" class="text-input" id="first-name" required></text-input>
+                <br>
+                <label for="last-name">Last Name</label>
+                <input type="text" class="text-input" id="last-name" required></text-input>
+                <br>
+                <label for="email-address">Email Address</label>
+                <input type="text" class="text-input" id="email-address" required></text-input>
+                <br>
+                <div class="radio-buttons">
+                    <div>
+                        <label for="road">Road</label>
+                        <input type="radio" name="running_preference" id="road" value="road" required>
+                    </div>
+                    <div>
+                        <label for="trail">Trail</label>
+                        <input type="radio" name="running_preference" id="trail" value="trail" required checked>
+                    </div>
+                    <div>
+                        <label for="both">Both</label>
+                        <input type="radio" name="running_preference" id="both" value="both" required>
+                    </div>
+                </div>
+                <button type="submit" class="join-button">Let's Go!</button>
+            </form>
+        </section>
+
+    </main>
     <!-- Footer -->
     <footer>
         <ul id="social-networks">
