--- a/signup.html
+++ b/signup.html
@@ -41,13 +41,13 @@
             <form method="POST" action="https://formdump.codeinstitute.net" id="signup-form">
                 <h2><i class="fa-solid fa-heartbeat"></i>Let's get you signed up</h2>
                 <label for="first-name">First Name</label>
-                <input type="text" class="text-input" id="first-name" required></text-input>
+                <input type="text" class="text-input" id="first-name" required>
                 <br>
                 <label for="last-name">Last Name</label>
-                <input type="text" class="text-input" id="last-name" required></text-input>
+                <input type="text" class="text-input" id="last-name" required>
                 <br>
                 <label for="email-address">Email Address</label>
-                <input type="text" class="text-input" id="email-address" required></text-input>
+                <input type="text" class="text-input" id="email-address" required>
                 <br>
                 <div class="radio-buttons">
                     <div>
